# 8-bit-virtual-machine

./: CMakeLists.txt  README.md
include/: chip8.h  chip8_audio.h  chip8_keyboard.h  chip8_memory.h  chip8_registers.h  chip8_screen.h  chip8_stack.h  config.h
src/: chip8.c  chip8_audio.c  chip8_keyboard.c  chip8_memory.c  chip8_screen.c  chip8_stack.c  main.c
